--- a/intro.tex
+++ b/intro.tex
@@ -129,7 +129,7 @@ One technological advancement that could lead to major wins is improving magnet 
 
 More concretely, this paper shows that new HTS tape technology is capable of lowering both pulsed and steady-state tokamak costs. Further, the benefits of doubling the magnet strength bring the situation to a realm of significantly diminished rates of return. HTS is thus the end goal for the conventional D-T fusion paradigm. 
 
-Moreover, this model shows that HTS is best utilized in different components for pulsed and steady-state operation. Steady-state tokamaks favor HTS use in the D-shaped magnets that circle the machine (i.e. the TF coils). Whereas pulsed devices would benefit from employing HTS in the central solenoid -- that produces most of a reactor's inductive current. A corollary of this is conventional copper magnets (i.e. inexpensive ones) can be used for pulsed TF coils, as their improved confinement saturates at much lower field strengths.
+Moreover, this model shows that HTS is best utilized in different components for pulsed and steady-state operation. Steady-state tokamaks favor HTS use in the D-shaped magnets that circle the machine (i.e. the TF coils). Whereas pulsed devices would benefit from employing HTS in the central solenoid -- that produces most of a reactor's inductive current. A corollary of this is \replaced{the more conventional low-temperature superconducting (LTS) magnets (i.e. less expensive ones)}{conventional copper magnets (i.e. inexpensive ones)} can be used for pulsed TF coils, as their improved confinement saturates at much lower field strengths.
 
 Now that the problem has been thoroughly introduced, we will go over the theory behind steady-state and, then, pulsed tokamaks. A couple segues will be taken along the way to show how the model can be incorporated into a fusion systems code. This code -- Fussy.jl -- is the topic of an appendix chapter and is freely available at:
  
