--- a/main.bib
+++ b/main.bib
@@ -3,6 +3,27 @@
 	# "\newcommand{\singleletter}[1]{#1} "
 	# "\newcommand{\switchargs}[2]{#2#1} " }
 
+@article{hutch,
+  title={Principles of plasma diagnostics},
+  author={Hutchinson, Ian H},
+  journal={Plasma Physics and Controlled Fusion},
+  volume={44},
+  number={12},
+  pages={2603},
+  year={2002},
+  publisher={IOP Publishing}
+}
+
+@article{oldpaper,
+abstract = {Hx «abn{\&}fcd tBUXi*srig{\textgreater}fcu boa talbcnd by • contractor of the VS. GovcTcmcai under coomct DE-ACQ5-MOR21400. Aixarfmjly, Ibe U.S. GUWUU li MOR210. Arfjy, oanstduwvc, *oy*liy-fice lkcrue to publish or rcprxtac the pablutod ferin af t{\&}» cortribotka, {\textless}* to dlow atben to do so, far VS. Oovczmaeid paipov{\&}.},
+author = {Uckan, N A},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Uckan - Unknown - ITER PHYSICS DESIGN GUIDELINES AT HIGH ASPECT RATIO.pdf:pdf},
+pages = {1--4},
+title = {{ITER Physics Design Guidelines at High Aspect Ratio}},
+year = {2009}
+}
+
+
 @misc{inputfile,
 author = {Meszaros et al},
 title = {{Demo I Input File}},
