--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,7 @@
 \usepackage{changes}
 \definecolor{blue}{rgb}{0,0,1.}
 
-\includeonly{model,biblio,code}
+%\includeonly{model,biblio}
 
 \let\vec\mathbf
 
