--- a/steady.tex
+++ b/steady.tex
@@ -409,7 +409,7 @@ Quickly noting, this $H_{BS}$ term serves as the analogue of \replaced{static}{f
 	E_F = 17.6 \ \textnormal{MeV}
 \end{equation}
  
-The $n_D$ and $n_T$ in this equation represent the density of the deuterium and tritium ions, respectively. Assuming a 50-50 mix of the two, they can be related to the electron density -- i.e. the one used in this model -- through the dilution factor \added{($f_D$). This dilution factor represents the decrease in available fuel from part of the plasma actually being composed of non-hydrogen gasses}:
+\added{The $E_F$ quantity is the energy created from a deuterium-tritium fusion reaction.} The $n_D$ and $n_T$ in this equation \added{then} represent the density of the deuterium and tritium ions, respectively. Assuming a 50-50 mix of the two, they can be related to the electron density -- i.e. the one used in this model -- through the dilution factor \added{($f_D$). This dilution factor represents the decrease in available fuel from part of the plasma actually being composed of non-hydrogen gasses}:
  \begin{equation}
  	n_D = n_T = f_D \cdot \left( \frac{n}{2} \right)
  \end{equation}
