--- a/variables.tex
+++ b/variables.tex
@@ -1,4 +1,4 @@
-\chapter{Presenting \replaced{Static}{Fixed} Variables}
+\chapter{Cataloging \replaced{Static}{Fixed} Variables}
 
 \label{chapter:var_table}
 
@@ -7,7 +7,7 @@
 \begin{tabular}{c|l}
 \textbf{Name} & \textbf{Value} \\
 \hline
-is\_pulsed & is reactor pulsed or steady-state (for $\eta_{CD}$ consistency or multiple current roots) \\
+is\_pulsed & is reactor pulsed or steady-state \\
 $H$ & h factor for ELMy H-mode scaling \\
 $Q$ & Physics Gain ($P_F/P_H$) \\
 $\epsilon$ & inverse aspect ratio \\
@@ -26,7 +26,7 @@ $\eta_{RF}$ &  efficiency of the RF antenna \\
 $\tau_{FT}$ &  time of flattop of reactor pulse \\
 $B_{CS}$ &  strength of magnetic field in central solenoid \\
 $(\beta_N)_{max}$ &  max allowed normalized beta normal \\
-$(q_{95})_{max}$ &  min allowed safety factor \\
+$(q_{\replaced{*}{95}})_{max}$ &  min allowed safety factor \\
 $(P_W)_{max}$ & maximum allowed wall loading power per surface area
 \end{tabular}
 \end{table}
